fix the launcher shortcut integration and comment out the shortcut and share intents until this is released

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,6 +162,25 @@
                 android:name="android.service.chooser.chooser_target_service"
                 android:value=".shared.service.MessengerChooserTargetService" />
 
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.VIEW" />-->
+
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+
+                <!--<data android:scheme="sms" />-->
+                <!--<data android:scheme="smsto" />-->
+                <!--<data android:scheme="mms" />-->
+                <!--<data android:scheme="mmsto" />-->
+            <!--</intent-filter>-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEND" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+
+                <!--<data android:mimeType="text/vcard" />-->
+                <!--<data android:mimeType="text/x-vcard" />-->
+            <!--</intent-filter>-->
+
         </activity>
 
         <activity
@@ -172,20 +191,31 @@
             android:theme="@style/tutorial_FloatingTutorialTheme"
             android:windowSoftInputMode="adjustPan|stateAlwaysVisible" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-                <action android:name="android.intent.action.SENDTO" />
-                <category android:name="android.intent.category.DEFAULT" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEND" />-->
+                <!--<action android:name="android.intent.action.SENDTO" />-->
 
-                <data android:mimeType="text/plain" />
-                <data android:mimeType="image/*" />
-                <data android:mimeType="audio/*" />
-                <data android:mimeType="video/*" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--<category android:name="android.intent.category.BROWSABLE" />-->
 
-            <meta-data
-                android:name="android.service.chooser.chooser_target_service"
-                android:value=".shared.service.MessengerChooserTargetService" />
+                <!--<data android:scheme="sms" />-->
+                <!--<data android:scheme="smsto" />-->
+                <!--<data android:scheme="mms" />-->
+                <!--<data android:scheme="mmsto" />-->
+            <!--</intent-filter>-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEND" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+
+                <!--<data android:mimeType="text/plain" />-->
+                <!--<data android:mimeType="image/*" />-->
+                <!--<data android:mimeType="audio/*" />-->
+                <!--<data android:mimeType="video/*" />-->
+            <!--</intent-filter>-->
+
+            <!--<meta-data-->
+                <!--android:name="android.service.chooser.chooser_target_service"-->
+                <!--android:value=".shared.service.MessengerChooserTargetService" />-->
 
         </activity>
 
