--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@
 # for robolectric resources to not be invalid
 android.enableAapt2=false
 
-VERSION_NAME=2.7.0
-VERSION_CODE=91
+VERSION_NAME=2.7.
+VERSION_CODE=92
 
 MIN_SDK=21
 TARGET_SDK=27
