add folders table to Android along with the relevant APIs. Add and index folder_id in the conversations table and add support through the APIs

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # for robolectric resources to not be invalid
 android.enableAapt2=false
 
-VERSION_NAME=2.7.
+VERSION_NAME=2.7.1
 VERSION_CODE=92
 
 MIN_SDK=21
