convert to using Firebase job dispatcher instead of JobService

--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -124,6 +124,7 @@ dependencies {
     api 'com.klinkerapps:giphy:1.1.1'
     api 'com.klinkerapps:floating-tutorial:1.0.3'
 
+    api 'com.firebase:firebase-jobdispatcher:0.8.5'
     api 'com.github.apl-devs:appintro:v4.2.0'
     api 'com.yalantis:ucrop:2.2.0'
     api 'de.hdodenhof:circleimageview:2.1.0'
