--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <meta-data
+            android:name="com.google.android.wearable.notificationBridgeMode"
+            android:value="NO_BRIDGING" />
+
         <activity android:name=".activity.MessengerActivity" android:theme="@style/PulseThemeWearable" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
