--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -130,6 +130,7 @@ dependencies {
     api 'de.hdodenhof:circleimageview:2.1.0'
     api 'com.afollestad:sectioned-recyclerview:0.2.3'
     api 'com.afollestad:easyvideoplayer:0.3.0'
+    api 'com.afollestad:drag-select-recyclerview:1.0.0'
     api 'com.larswerkman:lobsterpicker:1.0.1'
     api 'me.leolin:ShortcutBadger:1.1.14@aar'
     api 'com.bignerdranch.android:recyclerview-multiselect:0.2'
