--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -307,6 +307,7 @@
         <service android:name=".service.SimpleSubscriptionCheckService" />
         <service android:name=".service.SimpleLifetimeSubscriptionCheckService" />
         <service android:name=".service.MediaParserService" />
+        <service android:name=".service.AutoReplyParserService" />
         <service android:name=".service.NewMessagesCheckService" />
         <service android:name=".service.FirebaseResetService" />
         <service android:name=".service.ResendFailedMessage" />
