--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -257,7 +257,6 @@
                 android:value="true" />
         </service>
 
-
         <service
             android:exported="false"
             android:name=".service.jobs.CleanupOldMessagesJob">
@@ -277,6 +276,14 @@
         <service
             android:exported="false"
             android:name=".service.jobs.MarkAsSentJob">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:exported="false"
+            android:name=".service.jobs.SyncRetryableRequestsJob">
             <intent-filter>
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
