--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     api "com.android.support:customtabs:$ANDROID_SUPPORT_VERSION"
     api "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
 
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
+    api "com.google.firebase:firebase-core:$FIREBASE_VERSION"
     api "com.google.firebase:firebase-perf:$FIREBASE_VERSION"
     api "com.google.firebase:firebase-crash:$FIREBASE_VERSION"
     api "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
