--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
         mavenCentral()
         maven { url "https://maven.google.com" }
         maven { url "https://dl.bintray.com/drummer-aidan/maven" }
+        maven { url "http://dl.bintray.com/glomadrian/maven" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/mockito/maven" }
