if the user has an account, let them enter their account credentials to get past the passcode screen

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -89,11 +89,11 @@
             android:launchMode="singleInstance" />
 
         <activity android:name=".activity.PasscodeVerificationActivity"
-            android:theme="@style/tutorial_FloatingTutorialTheme"
+            android:theme="@style/PulsePasscode"
             android:launchMode="singleInstance" />
 
         <activity android:name=".activity.PasscodeSetupActivity"
-            android:theme="@style/tutorial_FloatingTutorialTheme"
+            android:theme="@style/PulsePasscode"
             android:launchMode="singleInstance" />
 
         <provider
