--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <!-- TODO: delete this when rolling out the password protection feature. I am just disabling it to hide the permission right now. -->
-    <!--<uses-permission android:name="android.permission.USE_FINGERPRINT"-->
-        <!--tools:node="remove" >-->
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"
+        tools:node="remove" />
 
     <uses-feature
         android:name="android.hardware.camera"
