--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     api project(":api")
     api project(":encryption")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$KOTLIN_VERSION"
 
     implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
