--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -124,7 +124,7 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
     api "com.github.bumptech.glide:glide:$GLIDE_VERSION"
 
-    api 'com.klinkerapps:android-smsmms:5.0.0.9-SNAPSHOT'
+    api 'com.klinkerapps:android-smsmms:5.0.0'
     api 'com.klinkerapps:link_builder:2.0.3'
     api 'com.klinkerapps:android-chips:1.3.0@aar'
     api 'com.klinkerapps:android-transcoder:1.0.1'
