--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -116,7 +116,7 @@ dependencies {
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
     api "com.google.firebase:firebase-core:$FIREBASE_VERSION"
-    api "com.google.firebase:firebase-perf:$FIREBASE_VERSION"
+    api "com.google.firebase:firebase-perf:15.1.0"
     api "com.google.firebase:firebase-crash:$FIREBASE_VERSION"
     api "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
     api "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES_VERSION"
@@ -159,6 +159,6 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation 'org.mockito:mockito-core:2.18.3'
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
