finish updating dependencies and cleaning them up

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,19 +16,22 @@
 
 VERSION_NAME=2.11.1
 VERSION_CODE=111
+
+ANDROID_GRADLE_VERSION=3.1.2
+KOTLIN_VERSION=1.2.41
 MIN_SDK=21
 TARGET_SDK=27
 COMPILE_SDK=27
-USE_JACK=false
 
-KOTLIN_VERSION=1.2.41
-ANDROID_GRADLE_VERSION=3.1.2
-BUILD_TOOLS_VERSION=27.0.3
 ANDROID_SUPPORT_VERSION=27.1.1
-WEARABLE_SUPPORT_VERSION=2.0.4
-ROBOLECTRIC_VERSION=3.6.1
+GOOGLE_PLAY_SERVICES_VERSION=15.0.1
+FIREBASE_CORE=15.0.2
+FIREBASE_MESSAGING=15.0.2
+FIREBASE_AUTH=15.1.0
+FIREBASE_PERF=15.1.0
+
 GLIDE_VERSION=4.7.1
 RETROFIT_VERSION=2.4.0
+ROBOLECTRIC_VERSION=3.6.1
+MOCKITO_VERSION=2.18.3
 
-FIREBASE_VERSION=15.0.2
-GOOGLE_PLAY_SERVICES_VERSION=15.0.1
