--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -23,7 +23,6 @@ android {
     }
 
     compileSdkVersion parseSdkVersion(COMPILE_SDK)
-    buildToolsVersion BUILD_TOOLS_VERSION
     resourcePrefix 'api_'
 
     defaultConfig {
@@ -74,13 +73,13 @@ dependencies {
     implementation "com.android.support:design:$ANDROID_SUPPORT_VERSION"
     implementation "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
 
-    implementation "com.google.firebase:firebase-core:$FIREBASE_VERSION"
-    implementation "com.google.firebase:firebase-storage:$FIREBASE_VERSION"
-    implementation "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
-    api "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
+    implementation "com.google.firebase:firebase-core:$FIREBASE_CORE"
+    implementation "com.google.firebase:firebase-storage:$FIREBASE_CORE"
+    implementation "com.google.firebase:firebase-auth:$FIREBASE_AUTH"
+    api "com.google.firebase:firebase-messaging:$FIREBASE_MESSAGING"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
