--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ android {
     }
 
     compileSdkVersion parseSdkVersion(COMPILE_SDK)
-    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         multiDexEnabled true
@@ -136,7 +135,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation 'org.mockito:mockito-core:2.18.3'
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
     testImplementation project(path: ':encryption')
 }
