--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -27,7 +27,6 @@ android {
     }
 
     compileSdkVersion parseSdkVersion(COMPILE_SDK)
-    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         multiDexEnabled true
@@ -115,10 +114,10 @@ dependencies {
     api "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
-    api "com.google.firebase:firebase-core:$FIREBASE_VERSION"
-    api "com.google.firebase:firebase-perf:15.1.0"
-    api "com.google.firebase:firebase-crash:$FIREBASE_VERSION"
-    api "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
+    api "com.google.firebase:firebase-core:$FIREBASE_CORE"
+    api "com.google.firebase:firebase-perf:$FIREBASE_PERF"
+    api "com.google.firebase:firebase-crash:$FIREBASE_CORE"
+    api "com.google.firebase:firebase-auth:$FIREBASE_AUTH"
     api "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES_VERSION"
 
     annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
@@ -159,6 +158,6 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation 'org.mockito:mockito-core:2.18.3'
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
