--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -19,7 +19,6 @@ android {
     }
 
     compileSdkVersion parseSdkVersion(COMPILE_SDK)
-    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         multiDexEnabled true
@@ -118,11 +117,11 @@ dependencies {
     implementation 'com.klinkerapps:wearable-reply:1.0.1'
     implementation "com.google.android.gms:play-services-wearable:${GOOGLE_PLAY_SERVICES_VERSION}"
 
-    implementation "com.google.android.support:wearable:${WEARABLE_SUPPORT_VERSION}"
+    implementation "com.google.android.support:wearable:2.3.0"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
 
