could those be preventing the app from pushing to bluetooth?

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -135,7 +135,7 @@
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
 
-            <intent-filter android:priority="2147483647">
+            <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
             </intent-filter>
 
@@ -146,17 +146,11 @@
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
 
-            <intent-filter android:priority="2147483647">
+            <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
 
         </receiver>
-
-        <!--<receiver android:name=".receiver.SmsDeliverReceiver"-->
-        <!--android:permission="android.permission.BROADCAST_SMS"-->
-        <!--android:exported="true">-->
-
-        <!--</receiver>-->
 
         <receiver
             android:name=".receiver.SmsSentReceiver"
