implement the notification side of parsing OTP codes from the notifications

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -313,6 +313,7 @@
         <service android:name=".service.notification.NotificationService" />
         <service android:name=".service.NotificationDismissedService" />
         <service android:name=".service.NotificationMarkReadService" />
+        <service android:name=".service.NotificationCopyOtpService" />
         <service android:name=".service.NotificationMuteService" />
         <service android:name=".service.NotificationDeleteService" />
         <service android:name=".service.NotificationCallService" />
