--- a/gradle.properties
+++ b/gradle.properties
@@ -25,10 +25,11 @@ COMPILE_SDK=27
 
 ANDROID_SUPPORT_VERSION=27.1.1
 GOOGLE_PLAY_SERVICES_VERSION=15.0.1
-FIREBASE_CORE=15.0.2
-FIREBASE_MESSAGING=15.0.2
-FIREBASE_AUTH=15.1.0
-FIREBASE_PERF=15.2.0
+FIREBASE_CORE=16.0.0
+FIREBASE_MESSAGING=17.0.0
+FIREBASE_STORAGE=16.0.1
+FIREBASE_AUTH=16.0.1
+FIREBASE_PERF=16.0.0
 
 GLIDE_VERSION=4.7.1
 RETROFIT_VERSION=2.4.0
