--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,12 @@ VERSION_NAME=4.0.2
 VERSION_CODE=126
 
 ANDROID_GRADLE_VERSION=3.1.3
-KOTLIN_VERSION=1.2.51
+KOTLIN_VERSION=1.2.60
 MIN_SDK=21
 TARGET_SDK=28
 COMPILE_SDK=28
 
-ANDROID_SUPPORT_VERSION=27.1.1
+ANDROID_SUPPORT_VERSION=28.0.0-beta01
 GOOGLE_PLAY_SERVICES_VERSION=15.0.1
 FIREBASE_CORE=16.0.1
 FIREBASE_MESSAGING=17.0.0
