--- a/gradle.properties
+++ b/gradle.properties
@@ -14,16 +14,16 @@
 # limitations under the License.
 #
 
-VERSION_NAME=4.0.3
-VERSION_CODE=126
+VERSION_NAME=4.0.4
+VERSION_CODE=127
 
 ANDROID_GRADLE_VERSION=3.1.3
-KOTLIN_VERSION=1.2.60
+KOTLIN_VERSION=1.2.61
 MIN_SDK=21
 TARGET_SDK=28
 COMPILE_SDK=28
 
-ANDROID_SUPPORT_VERSION=28.0.0-beta01
+ANDROID_SUPPORT_VERSION=28.0.0-rc01
 GOOGLE_PLAY_SERVICES_VERSION=15.0.1
 FIREBASE_CORE=16.0.1
 FIREBASE_MESSAGING=17.0.0
@@ -31,7 +31,7 @@ FIREBASE_STORAGE=16.0.1
 FIREBASE_AUTH=16.0.2
 FIREBASE_PERF=16.0.0
 
-GLIDE_VERSION=4.7.1
+GLIDE_VERSION=4.8.0
 RETROFIT_VERSION=2.4.0
 ROBOLECTRIC_VERSION=3.6.1
 MOCKITO_VERSION=2.18.3
