--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ MIN_SDK=21
 TARGET_SDK=28
 COMPILE_SDK=28
 
-ANDROID_SUPPORT_VERSION=28.0.0
+ANDROID_X_VERSION=1.0.0
 GOOGLE_PLAY_SERVICES_VERSION=15.0.1
 FIREBASE_CORE=16.0.3
 FIREBASE_MESSAGING=17.3.2
