--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'io.fabric'
+apply plugin: 'kotlin-android-extensions'
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
